--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
                         <p>First thing first, create a new unity project. Name it whatever you like 😒</p>
                         <p>
-                            Get the latest <a href="">Package</a> and open it in the project. <br>
+                            Get the latest <a href="https://github.com/kings2000/QNetworkSimulation/tree/1.1">Package</a> and open it in the project. <br>
                             Lets start with the Scene Setup. In the scene create a plane object, I named mine floor, And gave it a floor material.
                         </p>
                         <img src="./FloorSetup.PNG" >
